--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "client",
+  "name": "OnlineSchool",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
